New upstream release 7.12.4
git-svn-id: https://svn.openfmi.net/debian-addons-bg/icmake/trunk@1520 d3044522-2ae9-0310-97cb-f8f8e269a004

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+icmake (7.12.4-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 22 Dec 2009 15:15:42 +0100
+
 icmake (7.12.3-1) unstable; urgency=low
 
   * New upstream release
