--- a/icmake/changelog
+++ b/icmake/changelog
@@ -1,3 +1,10 @@
+icmake (7.12.5)
+
+ * added missing test for modified SCANSPEC (lexer) file in
+    scripts/icmbuild.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 23 Dec 2009 10:44:30 +0100
+
 icmake (7.12.4)
 
   * repaired lacking directory recognition in scripts/icmstart.im
