--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+icmake (7.12.5-2) UNRELEASED; urgency=low
+
+  * debian/watch, debian/copright:
+      Update to point to the new upstream location.
+  * Bump standards version to 3.9.1 (no changes).
+
+ -- tony mancill <tmancill@debian.org>  Tue, 03 Aug 2010 10:42:03 -0700
+
 icmake (7.12.5-1) unstable; urgency=low
 
   * New upstream release
