New upstream release, ready for 7.13
git-svn-id: https://svn.openfmi.net/debian-addons-bg/icmake/trunk@1633 d3044522-2ae9-0310-97cb-f8f8e269a004

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+icmake (7.13.0-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 02 Oct 2010 15:54:20 +0200
+
 icmake (7.12.5-2) UNRELEASED; urgency=low
 
   * debian/watch, debian/copright:
