Man-pages now updated: ready for 7.13.1
git-svn-id: https://svn.openfmi.net/debian-addons-bg/icmake/trunk@1635 d3044522-2ae9-0310-97cb-f8f8e269a004

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+icmake (7.13.1-1) experimental; urgency=low
+
+  * New upstream release
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 03 Oct 2010 14:44:42 +0200
+
 icmake (7.13.0-1) experimental; urgency=low
 
   [ Frank B. Brokken ]
