set distribution to unstable
git-svn-id: https://svn.openfmi.net/debian-addons-bg/icmake/trunk@1697 d3044522-2ae9-0310-97cb-f8f8e269a004

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+icmake (7.13.1-2) unstable; urgency=low
+
+  * Set distribution to unstable.
+
+ -- tony mancill <tmancill@debian.org>  Fri, 24 Dec 2010 10:43:13 -0800
+
 icmake (7.13.1-1) experimental; urgency=low
 
   * New upstream release
