--- a/icmake/doc/icmake.1
+++ b/icmake/doc/icmake.1
@@ -1,4 +1,4 @@
-.TH "icmake" "1" "1992\-2010" "icmake\&.7\&.13\&.1\&.tar\&.gz" "A program maintenance utility"
+.TH "icmake" "1" "1992\-2011" "icmake\&.7\&.14\&.0\&.tar\&.gz" "A program maintenance utility"
 
 .PP 
 .SH "NAME"
@@ -1081,7 +1081,8 @@ particular the \fIexamples/icmbuild\fP subdirectory containing a general script
 for \fBC++\fP and \fBC\fP program maintenance\&.
 .PP 
 .SH "SEE ALSO"
-\fBicmbuild\fP(1), \fBicmstart\fP(1), \fBicmstart\&.rc\fP(7), \fBmake\fP(1)
+\fBicmbuild\fP(1), \fBicmconf\fP(7), 
+\fBicmstart\fP(1), \fBicmstart\&.rc\fP(7), \fBmake\fP(1)
 .PP 
 .SH "BUGS"
 None reported
