--- a/icmake/doc/icmstart.1
+++ b/icmake/doc/icmstart.1
@@ -1,4 +1,4 @@
-.TH "icmstart" "1" "1992\-2010" "icmake\&.7\&.13\&.1\&.tar\&.gz" "starts icmbuild program maintenance"
+.TH "icmstart" "1" "1992\-2011" "icmake\&.7\&.14\&.0\&.tar\&.gz" "starts icmbuild program maintenance"
 
 .PP 
 .SH "NAME"
@@ -92,17 +92,17 @@ This file is overruled by \fI~/\&.icmake/icmstart\&.rc\fP\&. See
 The mentioned paths are sugestive only and may be installation dependent:
 .IP o 
 \fB/usr/share/icmake/icmconf\fP
-Example of a \fBicmstart\fP configuration file;
+Example of a \fBicmbuild\fP configuration file;
 .IP o 
 \fB/usr/share/icmake/CLASSES\fP
-Example of a \fBicmstart\fP \fICLASSES\fP file\&.
+Example of a \fBicmbuild\fP \fICLASSES\fP file\&.
 .IP o 
 \fB/usr/share/icmake/icmstart\&.rc\fP
 Default skeleton resource file\&.
 
 .PP 
 .SH "SEE ALSO"
-\fBicmake\fP(1), \fBicmbuild\fP(1), \fBicmstart\&.rc\fP(7)\&.
+\fBicmake\fP(1), \fBicmbuild\fP(1), \fBicmconf\fP(7), \fBicmstart\&.rc\fP(7)\&.
 .PP 
 .SH "BUGS"
 None reported
