--- a/icmake/doc/icmstart.rc.7
+++ b/icmake/doc/icmstart.rc.7
@@ -1,4 +1,4 @@
-.TH "icmstart\&.rc" "7" "1992\-2010" "icmake\&.7\&.13\&.1\&.tar\&.gz" "icmstart resource file"
+.TH "icmstart\&.rc" "7" "1992\-2011" "icmake\&.7\&.14\&.0\&.tar\&.gz" "icmstart resource file"
 
 .PP 
 .SH "NAME"
@@ -116,17 +116,17 @@ Empty lines are skipped\&.
 The mentioned paths are sugestive only and may be installation dependent:
 .IP o 
 \fB/usr/share/icmake/icmconf\fP
-Example of a \fBicmstart\&.rc\fP configuration file;
+Example of an \fBicmbuild\fP configuration file;
 .IP o 
 \fB/usr/share/icmake/CLASSES\fP
-Example of a \fBicmstart\&.rc\fP \fICLASSES\fP file\&.
+Example of an \fBicmbuild\fP \fICLASSES\fP file\&.
 .IP o 
 \fB/usr/share/icmake/icmstart\&.rc\fP
 Default skeleton resource file\&.
 
 .PP 
 .SH "SEE ALSO"
-\fBicmake\fP(1), \fBicmbuild\fP(1), \fBicmstart\fP(1)
+\fBicmake\fP(1), \fBicmbuild\fP(1), \fBicmconf\fP(7), \fBicmstart\fP(1)
 .PP 
 .SH "BUGS"
 None reported
