--- a/icmake/doc/icmbuild.1
+++ b/icmake/doc/icmbuild.1
@@ -178,12 +178,13 @@ program, using the library \fIlibbobcat1\fP as an additional library:
 //#define CLS
 
     // Uncomment to use the ALL facility and a class dependency setup in the
-    // CLASSES file\&. When a directory contains a file ALL then all class
-    // sources and sources of all classes depending on it are also compiled\&.
-    // Class dependencies in CLASSES consist of the class name (as the first 
-    // word on a line) optionally followed by additional class names, which
-    // are the classes directly depending on the line\(cq\&s first class name\&.
-//#define USE_ALL
+    // CLASSES file\&. When a directory contains a file ALL (optionally rename
+    // this filename by providing an alternative name) then all class sources
+    // and sources of all classes depending on it are also compiled\&.  Class
+    // dependencies in CLASSES consist of the class name (as the first word on
+    // a line) optionally followed by additional class names, which are the
+    // classes directly depending on the line\(cq\&s first class name\&.
+//#define USE_ALL             \(dq\&ALL\(dq\&
 
     // define the compiler to use:
 #define COMPILER            \(dq\&g++\(dq\&
