--- a/icmake/doc/icmconf.7
+++ b/icmake/doc/icmconf.7
@@ -104,13 +104,14 @@ clear the terminal screen before starting the compilation\&. By default
 it is not defined\&.
 .IP 
 .IP o 
-\fB#define USE_ALL\fP
+\fB#define USE_ALL     \(dq\&ALL\(dq\&\fP
 .br 
 When this directive is specified (by default it is \fInot\fP specified) a
 class dependency setup defined in the CLASSES file will be used\&. In
-this case, when a directory contains a file named \fIALL\fP (capitals!)
-then all sources of that class as well as all sources of all classes
-depending on it are (re)compiled\&.
+this case, when a directory contains a file named at the \fIUSE_ALL\fP
+directive (the default \fIicmconf\fP file pre\-specifies the filename
+\fIALL\fP) then all sources of that class as well as all sources of all
+classes depending on it are (re)compiled\&.
 .IP 
 Class dependencies in CLASSES consist of the class name (as the first
 word on a line) optionally followed by additional class names, which
@@ -143,7 +144,11 @@ class\(cq\&s internal organization changes, e\&.g\&., when the organization of
 its data members is modified\&. By simply creating a file \fIALL\fP the
 required recompilations will be performed\&.
 .IP 
-Following the recompilation the \fIALL\fP \fBs\fP are removed\&. 
+Following the recompilation the \fIALL\fP \fBs\fP are removed\&.  
+.IP 
+Note also that when the \fIUSE_ALL\fP directive is used the command
+\fIicmbuild clean\fP also removes any leftover \fIUSE_ALL\fP files from
+the program\(cq\&s direct subdirectories\&.
 .IP 
 .IP o 
 \fB#define COMPILER            \(dq\&g++\(dq\&\fP
@@ -382,7 +387,7 @@ configuration files (like \fIVERSION\fP and \fIicmstart\&.rc\fP)
 Optional directory containing user\-defined specifications overruling
 the system\-wide definitions\&. This directory is the proper location for
 a file \fIAUTHOR\fP defining the \fIAUTHOR\fP directive with the user\(cq\&s
-name\&. E\&.g\&.,
+name\&. E\&.g\&., my \fI\&.icmake/AUTHOR\fP file contains:
 .IP 
 .nf 
 #define AUTHOR  \(dq\&Frank B\&. Brokken (f\&.b\&.brokken@rug\&.nl)\(dq\&;
