--- a/icmake/changelog
+++ b/icmake/changelog
@@ -1,3 +1,9 @@
+icmake (7.14.1)
+
+  * Added test for defined SHAREDREQ to icmbuild
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 17 Jan 2011 20:29:51 +0100
+
 icmake (7.14.0)
 
   * Repaired segfault error caused by calling an underfined function
