--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+icmake (7.14.1-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 30 Jan 2011 20:21:20 +0100
+
 icmake (7.14.0-1) unstable; urgency=low
 
   * New upstream release: repaired shared lib. construction, new icmbuild
