Working towards 7.15.00, see the changelog file
git-svn-id: https://icmake.svn.sourceforge.net/svnroot/icmake/icmake/trunk@1162 dcc949cb-2a1c-0410-b67a-e7e5ca830264

--- a/icmake/changelog
+++ b/icmake/changelog
@@ -1,3 +1,18 @@
+icmake (7.15.00)
+
+  * AUTHOR, VERSION and YEAR removed from /etc/icmake, see icmstart(1)
+
+  * Double installation of changelog.gz prevented
+
+  * /usr/share/doc/icmake/mail.frank removed from the installation
+
+  * icmstart.rc supports optional P and L flags for program and library
+    only icmake project installations. See icmstart.rc(7)
+
+  * Using standard x.yy.zz version number format
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>
+
 icmake (7.14.1)
 
   * Added test for defined SHAREDREQ to icmbuild
