--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+icmake (7.15.00-1) unstable; urgency=low
+
+  * New upstream release, moved 'mail.frank' to upstream
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 06 Feb 2011 16:49:20 +0100
+
 icmake (7.14.1-1) unstable; urgency=low
 
   * New upstream release
