Added stamp to 7.15.00 release changelog
git-svn-id: https://icmake.svn.sourceforge.net/svnroot/icmake/icmake/trunk@1172 dcc949cb-2a1c-0410-b67a-e7e5ca830264

--- a/icmake/changelog
+++ b/icmake/changelog
@@ -11,7 +11,7 @@ icmake (7.15.00)
 
   * Using standard x.yy.zz version number format
 
- -- Frank B. Brokken <f.b.brokken@rug.nl>
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 14 Feb 2011 20:56:28 +0100
 
 icmake (7.14.1)
 
