--- a/icmake/INSTALL.im
+++ b/icmake/INSTALL.im
@@ -29,3 +29,22 @@
 #define CONFDIR     "etc/icmake"
 #define DOCDIR      "usr/share/doc/icmake"
 #define DOCDOCDIR   "usr/share/doc/icmake-doc"
+
+#define CPPFLAGS    "-O2 -g"
+    // Specify compiler options that should be used. Overruled by the CPPFLAGS
+    // environment variable. 
+    // The option "-Wall" is always used.
+    // For profiling use the  -pg flags, and don't strip
+
+#define LDFLAGS     ""
+    // Specify linker options. None by default. Do not specify -s (strip) here
+    // as strip is handled by adding a command to the build call.
+
+
+
+
+
+
+
+
+
