--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+icmake (7.16.00-1) unstable; urgency=low
+
+  * New upstream release, acknowledges CFLAGS, LDFLAGS etc.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 24 Jun 2011 20:35:48 +0200
+
 icmake (7.15.00-1) unstable; urgency=low
 
   * New upstream release, moved 'mail.frank' to upstream
