--- a/icmake/changelog
+++ b/icmake/changelog
@@ -1,3 +1,10 @@
+icmake (7.16.01)
+
+  * Removed erroneous -o from '-fPIC -o' in icmbuild at line 450 in
+    icmbuild.in 
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 28 Sep 2011 20:41:33 +0200
+
 icmake (7.16.00)
 
   * `icm_bootstrap' script now recognizes CFLAGS and LDFLAGS environment
