updated VERSION's years to include 2012
git-svn-id: https://icmake.svn.sourceforge.net/svnroot/icmake/trunk@1185 dcc949cb-2a1c-0410-b67a-e7e5ca830264

--- a/icmake/changelog
+++ b/icmake/changelog
@@ -1,3 +1,9 @@
+icmake (7.16.02) ISN
+
+  * Updated YEAR information in the file VERSION
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 01 Jan 2012 15:31:23 +0100
+
 icmake (7.16.01)
 
   * Removed erroneous -o from '-fPIC -o' in icmbuild at line 450 in
