--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-icmake (7.16.02-1) unstable; urgency=low
+icmake (7.17.00-1) unstable; urgency=low
 
-  * New upstream release updates icmake's release years
+  * New upstream release updates icmake's release years and modified the
+    icmbuild script's handling of class dependencies.
 
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 01 Jan 2012 15:38:17 +0100
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 03 Jan 2012 17:43:15 +0100
 
 icmake (7.16.01-1) unstable; urgency=low
 
