Changed USE_ALL removal + WIP on the man-pages
git-svn-id: https://icmake.svn.sourceforge.net/svnroot/icmake/trunk@1190 dcc949cb-2a1c-0410-b67a-e7e5ca830264

--- a/icmake/changelog
+++ b/icmake/changelog
@@ -1,3 +1,11 @@
+icmake (7.18.00)
+
+  * Fine-tuned icmbuild so that only used USE_ALL files are removed instead of
+    all files named so
+
+  * TODO: improve the documentation about class dependency handling
+
+
 icmake (7.17.00)
 
   * Changed (mproved/repaired) the directory dependencies handling (as defined
